turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:30: error: Missing closing brace `}' assumed here
    		for(j<-0 to nbrCouleur-1){
                ^